# Pixcel

./: .gitignore  .nxignore  AGENTS.md  CLAUDE.md  PHASE-4-MIGRATION.md  PHASE-4-PROGRESS-REPORT.md  README.md  RELEASE-v3.1.md  V4-MIGRATION-PLAN.md  WEB-WORKERS-COMPLETE.md  nx.json  package-lock.json  package.json  pixcel-copilot-chat-history.md  tsconfig.base.json
demos/: benchmark.html  demo-border-styles.html  demo-border-styles2.html  demo-borders.html  demo-canvas.html  demo-gradient-helpers.html  demo-new.html  demo-per-cell-borders.html  demo-profiler.html  demo-virtual-scroll.html  demo.html  index.html
docs/: AGENTIC-ARTISAN-THESIS.md  AI-GALLERY.md  ARCHITECTURE-PROPOSAL.md  CORE-FOUNDATION-CHECKLIST.md  DIGITAL-WALL.md  LIVE-ARTISAN-SPEC.md  MATRIX-LIVE-SHOW.md  MIGRATION-BACKLOG.md  MODEL-REQUIREMENTS.md  ON-CHAIN-PIXCEL.md  PIXCEL-AGENT-PRIMITIVE.md  PIXCEL-ART-ENGINE.md  PIXCEL-CRAFT-RUBRIC.md  PIXCEL-LIVE-SSE.md  PIXCEL-METHOD.md  PIXCEL-PRODUCT-SPEC.md  PIXCEL-PRODUCT.md  PIXCEL-SKILL.md  PIXCEL-UNIFICATION-PLAN.md  PIXCEL-WORKFLOW.md  PLAN-ADAPTIVE-BUDGET.md  PLAN-EVALUATOR.md  PLAN-IMAGE-INTENT.md  PLAN-LIVE-SHOW-V2.md  PLAN-QUALITY-ENGINE.md  PLATFORM-MERGE-README.md  Phase-1-Foundation.md  Phase-1-Summary.md  Phase-2-Performance.md  Phase-3-DataFirst.md  SPEC-DIMENSIONS.md  STATE-OF-THE-STUDIO.md  STATUS-AND-NEXT-STEPS.md  THE-STATUE-METHOD.md  UI-LAYER-CHARTER.md  UNIFICATION-LOG.md  chat-runtime-design.md  pxs-relfection-2.md  rust-idee.md
examples/: simple-usage.html
src/: pxs.js  (+1 more)
wasm/: Cargo.toml  README.md  build.sh
wasm/src/: lib.rs
(+88 files in other folders)
