[package]
name = "pxs-compute"
version = "0.1.0"
edition = "2021"
description = "High-performance compute module for PXS pixel grid library"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

# For SIMD optimization (optional, requires nightly)
# packed_simd_2 = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
